# ssh-mcp-rs

./: Cargo.toml  GEMINI.md  README.md
.github/workflows/: ci.yml  release.yml
Docs/: rmcp-sdk.md  russh-library.md
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/ssh/: command.rs  config.rs  connection.rs  elevation.rs  handler.rs  sanitize.rs
src/tools/: mod.rs
ssh-mcp-rs/: Cargo.toml  IMPLEMENTATION-BLUEPRINT.md  README.md
ssh-mcp-rs/src/: config.rs  lib.rs  main.rs  server.rs
ssh-mcp-rs/src/ssh/: command.rs  connection.rs  elevation.rs  mod.rs
